Implement lazy loading for images, update gallery to use WebP format, and enhance form input styles for better usability

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			};
 		</script>
 		<script src="https://cdn.tailwindcss.com"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-qpbNo6Upk0YvGgTgTg7yqJk/HRfP9wra6nZBqNhI7Zk2gk2Xn3S3mHDEfS3A4dWcAF0aLz3w3dD8h8Zc6o6XRl8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<style>
 			/* Akony Font */
 			@font-face {
@@ -159,15 +159,15 @@
 						<div class="relative">
 							<div class="aspect-[4/3] rounded-2xl bg-gradient-to-br from-brand/20 to-brand/0 border border-slate-200 overflow-hidden">
 								<div class="absolute inset-0 grid grid-cols-3 gap-2 p-2 md:p-3">
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0010.jpg" style="background-image: url('images/IMG_0010.jpg')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0413.jpg" style="background-image: url('images/IMG_0413.jpg')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0608.jpg" style="background-image: url('images/IMG_0608.jpg')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0905.jpg" style="background-image: url('images/IMG_0905.jpg')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_1343.jpg" style="background-image: url('images/IMG_1343.jpg')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_2319.JPG" style="background-image: url('images/IMG_2319.JPG')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_4956.jpg" style="background-image: url('images/IMG_4956.jpg')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_5032.jpg" style="background-image: url('images/IMG_5032.jpg')"></div>
-									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_5054.jpg" style="background-image: url('images/IMG_5054.jpg')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0010.webp" style="background-image: url('images/IMG_0010.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0413.webp" style="background-image: url('images/IMG_0413.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0608.webp" style="background-image: url('images/IMG_0608.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_0905.webp" style="background-image: url('images/IMG_0905.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_1343.webp" style="background-image: url('images/IMG_1343.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_2319.webp" style="background-image: url('images/IMG_2319.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_4956.webp" style="background-image: url('images/IMG_4956.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_5032.webp" style="background-image: url('images/IMG_5032.webp')"></div>
+									<div class="gallery-item lightbox-item cursor-zoom-in rounded-xl bg-cover bg-center" data-gallery-src="images/IMG_5054.webp" style="background-image: url('images/IMG_5054.webp')"></div>
 								</div>
 							</div>
 						</div>
